--- a/assets/wifi_configuration_done.html
+++ b/assets/wifi_configuration_done.html
@@ -3,7 +3,7 @@
 <head>
     <title>WiFi Configuration</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, minimum-scale=1">
     <style>
         body {
             margin: 0;
@@ -86,7 +86,7 @@
         </svg>
         
         <div class="message">
-            <!-- <p>设备将在 <span id="countdown">3</span> 秒后重启</p> -->
+            <p>设备将在 <span id="countdown">3</span> 秒后重启</p>
             <p>Device will restart in <span id="countdown-en">3</span> seconds</p>
         </div>
     </div>
