--- a/assets/wifi_configuration.html
+++ b/assets/wifi_configuration.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title style="padding-top: 50px;">WiFi Configuration</title>
+    <title>WiFi Configuration</title>
     <meta charset="utf-8">
     <meta http-equiv="Content-Security-Policy" content="referrer no-referrer">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, minimum-scale=1">
@@ -193,7 +193,7 @@
         </select>
     </div>
     
-    <h1 data-lang="title">WiFi 配置</h1>
+    <h1 data-lang="title" style="padding-top: 15px;">WiFi 配置</h1>
     <form action="/submit" method="post" onsubmit="submitForm(event)">
         <div id="saved_list_container" style="display: none;">
             <h3 data-lang="saved_wifi">已保存的 WiFi</h3>
